# DLA_UNI

./: .gitignore  README.md  pyproject.toml
lab1/: DLA-Lab1.ipynb  README.md  pyproject.toml
lab1/src/: create_dls.py  factory_model.py  logger.py  main.py  train_and_evaluate.py
lab1/src/config/: train_file.yaml
lab1/src/config/model/: resnet50.yaml
lab2/: DLA-Lab2.ipynb  README.md  pyproject.toml
lab4/: DLA-Lab4.ipynb  README.md  pyproject.toml
