[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "faster-coco-eval>=1.7.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pycocotools>=2.0.11",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchmetrics[detection]>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.68.1",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
]
