[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "peft>=0.17.1",
    "scikit-learn>=1.6.1",
    "split-folders>=0.5.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.68.1",
    "transformers>=4.57.6",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
