[project]
name = "lab4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.68.1",
]
